pagina web html odin proyect

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <h1>Odin Recipes</h1>
-<a href="recipes/recipename.html">Recipe Title</a>
+<img src="../odin-recipes/imgen/ODIN.jpg" alt="odin cocinero" style="width: 640px;height: 360px;px;">
+<h2><i>Recetas</i></h2>
+
 <ul>
-    <li><a href ="https://www.allrecipes.com/recipe/236218/chef-johns-pasta-primavera/">Pasta Primavera</a></li>
-    <li><a href="https://www.allrecipes.com/recipe/229669/glazed-carrots/">Glazed Carrots</a></li>
-    <li><a href="https://www.allrecipes.com/recipe/14276/strawberry-spinach-salad-i/">Strawberry Spinach Salad</a></li>
+    <li><a href ="../odin-recipes/recipes/Chef John's Pasta Primavera.html">Pasta Primavera</a></li>
+    <li><a href="../odin-recipes/recipes/Glazed Carrots.html">Glazed Carrots</a></li>
+    <li><a href="../odin-recipes/recipes/lasgna.html">Lasagna</a></li>
 </ul>
