aprendiendo a usar css y colocando botones

--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
-<h1>Odin Recipes</h1>
-<img src="../odin-recipes/imgen/ODIN.jpg" alt="odin cocinero" style="width: 640px;height: 360px;px;">
-<h2><i>Recetas</i></h2>
-
-<ul>
-    <li><a href ="../odin-recipes/recipes/Chef John's Pasta Primavera.html">Pasta Primavera</a></li>
-    <li><a href="../odin-recipes/recipes/Glazed Carrots.html">Glazed Carrots</a></li>
-    <li><a href="../odin-recipes/recipes/lasgna.html">Lasagna</a></li>
-</ul>
+<!DOCTYPE html>
+<head>
+    <meta charset="UTF-8">
+    <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
+</head>
+<body>
+    <div id="titulo">
+        <h1>Odin Recipes</h1>
+    </div>
+    <img src="../odin-recipes/imgen/ODIN.jpg" alt="odin cocinero" style="width: 640px;height: 360px;px;">
+    <div id="encabezado">
+        <h2><i>Recetas</i></h2>
+    </div>
+        <ul class="mi-lista">
+            <li><button><a href ="../odin-recipes/recipes/Chef John's Pasta Primavera.html">Pasta Primavera</a></button></li>
+            <li><button><a href="../odin-recipes/recipes/Glazed Carrots.html">Glazed Carrots</a></button></li>
+            <li><button><a href="../odin-recipes/recipes/lasgna.html">Lasagna</a></button></li>
+            
+        </ul>
+   
+</body>
