apriendiendo un poco mas de css

--- a/index.html
+++ b/index.html
@@ -6,18 +6,21 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <div id="titulo">
+    <div class="titulo">
         <h1>Odin Recipes</h1>
     </div>
-    <img src="../odin-recipes/imgen/ODIN.jpg" alt="odin cocinero" style="width: 640px;height: 360px;px;">
-    <div id="encabezado">
-        <h2><i>Recetas</i></h2>
+    
+    <div class="contenedor">
+        <img src="../odin-recipes/imgen/ODIN.jpg" alt="odin cocinero" style="width: 360px;height: 240px;px;">
     </div>
-        <ul class="mi-lista">
-            <li><button><a href ="../odin-recipes/recipes/Chef John's Pasta Primavera.html">Pasta Primavera</a></button></li>
-            <li><button><a href="../odin-recipes/recipes/Glazed Carrots.html">Glazed Carrots</a></button></li>
-            <li><button><a href="../odin-recipes/recipes/lasgna.html">Lasagna</a></button></li>
+    <div class="titulo">
+        <h2><i>Recipes</i></h2>
+    </div>
+    <ul class="mi-lista">
+        <li><button><a href ="../odin-recipes/recipes/Chef John's Pasta Primavera.html">Pasta Primavera</a></button></li>
+        <li><button><a href="../odin-recipes/recipes/Glazed Carrots.html">Glazed Carrots</a></button></li>
+        <li><button><a href="../odin-recipes/recipes/lasgna.html">Lasagna</a></button></li>
             
-        </ul>
+    </ul>
    
 </body>
