--- a/recipes/Glazed Carrots.html
+++ b/recipes/Glazed Carrots.html
@@ -1,18 +1,26 @@
-<h1><strong>Glazed Carrots</strong></h1>
-<p>Glazed carrot sticks coated in a mixture of brown sugar and butter are a versatile side dish you can serve alongside a weeknight meatloaf, a Sunday ham, or your Thanksgiving turkey. These caramelized carrots are a definite kid-pleaser but they're elegant enough to impress the adults as well!</p>
-<img src="../imgen/glazes carrot.jpg" alt="Glazed Carrots" style="width: 640px;height: 360px;px;">
-<h2><strong>Ingredients</strong>/h2>
-<ul>
-    <li><i>Carrots:</i> Look for firm, plump, bright, and smooth carrots.</li>
-    <li> <i>Butter:</i> You'll need about ¼ cup butter to make these caramelized carrots.</li>
-    <li> <i>Brown sugar: </i>You can use light or dark brown sugar.</li>
-    <li> <i>Seasonings:</i> These glazed carrots are simply seasoned with salt and ground white pepper.</li>
-  
-
-</ul>
-<h2><strong>How to Make Glazed Carrots</strong></h2>
-<h3><i> 1-Cook the carrots:</i></h3>
-<p>Place the peeled and cut carrots in a saucepan, cover with water, and bring to a boil. Reduce the heat and simmer until the carrots are tender. Drain.</p>
-<h3><i> 2-Glaze the carrots:</i></h3>
-<p>Melt the butter in a saucepan, then add the sugar, salt, and pepper. Add carrots and toss until well-coated.</p>
-<a href="../index.html"> Back to menu</a>
+<!DOCTYPE html>
+<head>
+    <meta charset="UTF-8">
+    <title>Glazed Carrots</title>
+    <link rel="stylesheet" href="/repos/odin-recipes/styles.css">
+</head>
+<body>
+    <div class="titulo">
+        <h1><strong>Glazed Carrots</strong></h1>
+    </div>
+    <p>Glazed carrot sticks coated in a mixture of brown sugar and butter are a versatile side dish you can serve alongside a weeknight meatloaf, a Sunday ham, or your Thanksgiving turkey. These caramelized carrots are a definite kid-pleaser but they're elegant enough to impress the adults as well!</p>
+    <img src="../imgen/glazes carrot.jpg" alt="Glazed Carrots" style="width: 640px;height: 360px;px;">
+    <h2><strong>Ingredients</strong></h2>
+    <ul>
+        <li><strong>Carrots:</strong> Look for firm, plump, bright, and smooth carrots.</li>
+        <li><strong>Butter:</strong> You'll need about ¼ cup butter to make these caramelized carrots.</li>
+        <li><strong>Brown sugar: </strong>You can use light or dark brown sugar.</li>
+        <li><strong>Seasonings:</strong> These glazed carrots are simply seasoned with salt and ground white pepper.</li>
+    </ul>
+    <h2><strong>How to Make Glazed Carrots</strong></h2>
+    <h3><i> 1-Cook the carrots:</i></h3>
+    <p>Place the peeled and cut carrots in a saucepan, cover with water, and bring to a boil. Reduce the heat and simmer until the carrots are tender. Drain.</p>
+    <h3><i> 2-Glaze the carrots:</i></h3>
+    <p>Melt the butter in a saucepan, then add the sugar, salt, and pepper. Add carrots and toss until well-coated.</p>
+    <a href="../index.html"> Back to menu</a>
+</body>
