--- a/recipes/lasgna.html
+++ b/recipes/lasgna.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <title>Glazed Carrots</title>
+    <title>Lasagna</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
